--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
   },
 
   "icons": {
-    "48": "icon.png"
+    "48": "images/icon-48.png",
+    "96": "images/icon-96.png"
   },
 
   "devtools_page": "ditm-dt.html",
